test/types/records/split-init/split-init-out-formal-never-set2.good
split-init-out-formal-never-set2.chpl:1: In function 'outProc':
split-init-out-formal-never-set2.chpl:1: error: 'outarg' is not initialized and has no type
note: the type for a generic out-intent formal is inferred in the function body
split-init-out-formal-never-set2.chpl:2: note: 'outarg' is used here before it is initialized
